Moved API endpoint links to template.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@
     <title>SilverBullet</title>
 </head>
 <body>
-	<p><em>SilverBullet</em> is a live, distributed analysis platform for high-frequency trading applications. For details, see the <a href="https://github.com/metov/insight-silverbullet">Github repo</a>.
+	<p><em>SilverBullet</em> is a live, distributed analysis platform for high-frequency trading applications. For details, see the <a href="https://github.com/metov/insight-silverbullet">Github repo</a>.</p>
 
 	<h4>API endpoints:</h4>
     <ul id="api_endpoints">
