--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,8 @@
 <body>
 	<p><em>SilverBullet</em> is a live, distributed analysis platform for high-frequency trading applications. For details, see the <a href="https://github.com/metov/insight-silverbullet">Github repo</a>.</p>
 
+	<p><a href="bespokeanalytics.xyz:8080">Dashboard</a></p>
+
 	<h4>API endpoints:</h4>
     <ul id="api_endpoints">
         <li><a href="/api/asset_stat">Individual asset statistics</a></li>
